--- a/Nika's Wonderland/NW.html
+++ b/Nika's Wonderland/NW.html
@@ -72,13 +72,14 @@
 										<h3>Dinner with P&P</h3>
 										<p>The first (And probably only) time I guided us somewhere successfully</p>
 								</article>
+								
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/Us4.jpg" alt="" />
+										<img src="images/Us5.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Swan Lake</h3>
-										<p>It was sooo fancy and nice, we have to go again next year!</p>
+										<h3>Master and Margarita</h3>
+										<p>Even though I didn't understand anything, hearing you laugh was worth it all.</p>
 									</div>
 								</article>
 								<article>
@@ -118,6 +119,24 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Us4.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Swan Lake</h3>
+										<p>It was sooo fancy and nice, we have to go again next year!</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/Her10.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>On Wednesdays...</h3>
+										<p>You smash the patriarchy! Because you are strong and independent</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/09.jpg" class="image">
 										<img src="images/Her5.jpg" alt="" />
 									</a>
@@ -127,12 +146,30 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/Her12.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Sleeping Beauty</h3>
+										<p>"Less than 1 hour is not a nap" - Nika</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/10.jpg" class="image">
 										<img src="images/Her6.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>She woke up and choose violence</h3>
 										<p>But I'm never afraid with you, I always feel safe.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/Her11.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Sexy Glasses</h3>
+										<p>I know you don't like them much, but you look really nice with them</p>
 									</div>
 								</article>
 								<article>
@@ -222,14 +259,25 @@
                 <p><a href="https://www.youtube.com/watch?v=Ip0jJACsE_g" target="_blank">💌 Linkin Park - Good Things Go 🎵</p></a>
                 <p class="song-note">Why this song? I think it's the first meaningul song we shared together and it's a reminder that things can be better</p>
             </div>
-
+			<div class="song">
+                <a href="https://www.youtube.com/watch?v=jszFKG9zVs4&pp=ygUkcGllcmNlIHRoZSB2ZWlsIGp1c3QgdGhlIHdheSB5b3UgYXJl" target="_blank"><p>💌 Pierce The Veil - Just The Way You Are (Bruno Mars cover) 🎵</p></a>
+                <p class="song-note">Why this song? Because I love you just the way you are 🥰</p>
+            </div>
             <div class="song">
                 <a href="https://www.youtube.com/watch?v=lltVI8UWRoA&pp=ygUTbm9ydGhsYW5lIGluYW1vcmF0YdIHCQlPCQGHKiGM7w%3D%3D" target="_blank"><p>💌 Northlane - Inamorata 🎵</p></a>
                 <p class="song-note">Why this song? It describes quite well my love for you and what you represent for me</p>
             </div>
 			<div class="song">
+                <p><a href="https://www.youtube.com/watch?v=RZekS_waLUY&pp=ygUSYm10aCBtb3RoZXIgdG9uZ3Vl" target="_blank">💌 Bring Me The Horizon - Mother Tongue 🎵</p></a>
+                <p class="song-note">Why this song? I feel this song expresses quite well how happy I am that I met you and how special it was.</p>
+            </div>
+			<div class="song">
                 <a href="https://www.youtube.com/watch?v=PlA9o1rw-rY&pp=ygUQY2FmZSB0YWN1YmEgZXJlcw%3D%3D" target="_blank"><p>💌 Cafe Tacvba - Eres 🎵</p></a>
                 <p class="song-note">Why this song? I hope you still remember the translation 💜</p>
+            </div>
+			<div class="song">
+                <a href="https://www.youtube.com/watch?v=Kg6aD8EGcKw&pp=ygUebm90aGluZyBidXQgdGhpZXZlcyBpbXBvc3NpYmxl" target="_blank"><p>💌 Nothing But Thieves - Impossible 🎵</p></a>
+                <p class="song-note">Why this song? I never thought I would fall for anyone like I've fallen for you. And I'm so happy I did 💜</p>
             </div>
 			<div class="song">
                 <a href="https://www.youtube.com/watch?v=_gTsBdYntp4&pp=ygUbanVsaWV0YSB2ZW5lZ2FzIGxpbW9uIHkgc2Fs" target="_blank"><p>💌 Julieta Venegas - Limon y Sal 🎵</p></a>
