--- a/Nika's Wonderland/NW.html
+++ b/Nika's Wonderland/NW.html
@@ -228,12 +228,12 @@
 								<section>
 									<span class="icon style2 major fa-heart"></span>
 									<h3>Resilience</h3>
-									<p>Lapochka, after all you've been trough, you didn't give up, you kept going and fighting for yourself and for your peace. I admire that deeply, and I applaud you</p>
+									<p>Lapochka, after all you've been trough, you didn't give up, you kept going and fighting for yourself and for your peace. I admire that deeply; I'm proud of you and I applaud you</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-star"></span>
 									<h3>Genuine</h3>
-									<p>I don't know quite how to put it, but you just have personality. Your anime, your feminism, your skin care, all of your interests are cool, and I'm glad to share them with you.</p>
+									<p>I don't know quite how to put it, but you just have personality. Your anime, your feminism, your skin care, all of your interests are cool, and I'm glad we can have a safe space to be ourselves and share our interests.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sun"></span>
@@ -253,35 +253,43 @@
 <section class="wrapper style1 align-center">
     <div class="inner">
         <h2>Our Playlist 🎶</h2>
-        <p>A collection of songs that remind me of you 💖</p>
+        <p>A collection of songs that remind me of you or that I would like to share 💖</p>
         <div class="playlist">
             <div class="song">
                 <p><a href="https://www.youtube.com/watch?v=Ip0jJACsE_g" target="_blank">💌 Linkin Park - Good Things Go 🎵</p></a>
-                <p class="song-note">Why this song? I think it's the first meaningul song we shared together and it's a reminder that things can be better</p>
+                <p class="song-note">Why this song? I think it's the first meaningul song we shared together and it's a reminder that things can always be better</p>
             </div>
 			<div class="song">
                 <a href="https://www.youtube.com/watch?v=jszFKG9zVs4&pp=ygUkcGllcmNlIHRoZSB2ZWlsIGp1c3QgdGhlIHdheSB5b3UgYXJl" target="_blank"><p>💌 Pierce The Veil - Just The Way You Are (Bruno Mars cover) 🎵</p></a>
-                <p class="song-note">Why this song? Because I love you just the way you are 🥰</p>
+                <p class="song-note">Why this song? Because I love you just the way you are  And I won't ever get tired of telling of beautiful you are for me 🥰</p>
             </div>
             <div class="song">
                 <a href="https://www.youtube.com/watch?v=lltVI8UWRoA&pp=ygUTbm9ydGhsYW5lIGluYW1vcmF0YdIHCQlPCQGHKiGM7w%3D%3D" target="_blank"><p>💌 Northlane - Inamorata 🎵</p></a>
                 <p class="song-note">Why this song? It describes quite well my love for you and what you represent for me</p>
             </div>
 			<div class="song">
+                <a href="https://www.youtube.com/watch?v=KLgQKiUk7ms&pp=ygUcbGlua2luIHBhcmsgcm9hZHMgdW50cmF2ZWxlZA%3D%3D" target="_blank"><p>💌 Linkin Park - Roads Untraveled 🎵</p></a>
+                <p class="song-note">Why this song? It's all about not regretting our past. We both have been trough our own Hell, but if it would mean being with you, I would live trough it all over again. </p>
+            </div>
+			<div class="song">
                 <p><a href="https://www.youtube.com/watch?v=RZekS_waLUY&pp=ygUSYm10aCBtb3RoZXIgdG9uZ3Vl" target="_blank">💌 Bring Me The Horizon - Mother Tongue 🎵</p></a>
-                <p class="song-note">Why this song? I feel this song expresses quite well how happy I am that I met you and how special it was.</p>
+                <p class="song-note">Why this song? I feel this song expresses quite well how happy I am that I met you and how special that was 💖</p>
             </div>
 			<div class="song">
                 <a href="https://www.youtube.com/watch?v=PlA9o1rw-rY&pp=ygUQY2FmZSB0YWN1YmEgZXJlcw%3D%3D" target="_blank"><p>💌 Cafe Tacvba - Eres 🎵</p></a>
                 <p class="song-note">Why this song? I hope you still remember the translation 💜</p>
             </div>
 			<div class="song">
+                <a href="https://www.youtube.com/watch?v=w-nKsBl3m2w&pp=ygUiaWNlIG5pbmUga2lsbHMgd2Fsa2luZyBvbiBzdW5zaGluZQ%3D%3D" target="_blank"><p>💌 Ice Nine Kills - Walking on Sunshine 🎵</p></a>
+                <p class="song-note">Why this song? Because when I see you or hear you, I'm full of joy. I'm walking on sunshine! 🥰💜</p>
+            </div>
+			<div class="song">
                 <a href="https://www.youtube.com/watch?v=Kg6aD8EGcKw&pp=ygUebm90aGluZyBidXQgdGhpZXZlcyBpbXBvc3NpYmxl" target="_blank"><p>💌 Nothing But Thieves - Impossible 🎵</p></a>
-                <p class="song-note">Why this song? I never thought I would fall for anyone like I've fallen for you. And I'm so happy I did 💜</p>
+                <p class="song-note">Why this song? I never thought I would fall for anyone like I've fallen for you. And I'm so happy I did, I don't regret it at all 💜</p>
             </div>
 			<div class="song">
                 <a href="https://www.youtube.com/watch?v=_gTsBdYntp4&pp=ygUbanVsaWV0YSB2ZW5lZ2FzIGxpbW9uIHkgc2Fs" target="_blank"><p>💌 Julieta Venegas - Limon y Sal 🎵</p></a>
-                <p class="song-note">Why this song? It's a reminder that I love you exactly as you are, and that I cherish you as a whole, without wanting to change anything</p>
+                <p class="song-note">Why this song? It's a reminder that I love you exactly as you are, and that I cherish you as a whole, without wanting to change anything.</p>
             </div>
         </div>
     </div>
@@ -309,10 +317,18 @@
             <button class="open-when-btn" onclick="toggleMessage('message3')">If you miss me... 💕</button>
             <p id="message3" class="hidden-message">I'm probably missing you just as much. But remember that the distance doesn't change how much I care and love you. And I'm always one message away 💖</p>
         </div>
+		<div class="open-when">
+            <button class="open-when-btn" onclick="toggleMessage('message4')">If you made a mistake... </button>
+            <p id="message4" class="hidden-message">It's okay! No need to feel bad about it, we are humans. You are doing your best, I have no doubts! 😊 And you can always let me know if you need any help 😘</p>
+        </div>
 
 		<div class="open-when">
-            <button class="open-when-btn" onclick="toggleMessage('message4')">If are overwhelmed... </button>
-            <p id="message4" class="hidden-message">It's okay to be, from time to time. You are doing great. You are enough, you do enough. And I'm always cheering for you, I'm your biggest fan and also your friend 💖</p>
+            <button class="open-when-btn" onclick="toggleMessage('message5')">If are overwhelmed... </button>
+            <p id="message5" class="hidden-message">It's okay to be, from time to time. You are doing great. You are enough, you do enough. And I'm always cheering for you, I'm your biggest fan and also your friend 💖</p>
+        </div>
+		<div class="open-when">
+            <button class="open-when-btn" onclick="toggleMessage('message6')">If are happy...😊 </button>
+            <p id="message6" class="hidden-message">I'm happy too! Did you buy something new? I want to see it! You deserve it! 🥰 Did you have a nice meal? Did you find a new anime? Pray tell! Your joy is also my own, and I want to share it with you lapochka 🥰 You deserve aaaaaall the nice things in this World 💜</p>
         </div>
     </div>
 </section>
@@ -380,7 +396,7 @@
 											<header>
 												<h1>Final statement</h1>
 											</header>
-											<p>So, lapochka, that's all 😊. I hope you liked it and I could make you laugh at least once. I love you very very much just as you are, without changing a single thing, and I choose you every single day, because you are the best person in my life, and I'm looking forward to all the time we will spend and all the memories we will create, together 😍.</p>
+											<p>So, lapochka, that's all 😊. I hope you liked it and I could make you laugh at least once. I love you very very much just as you are, without changing a single thing, and I choose you every single day, because you are the best person in my life. I'm looking forward to all the time we will spend, all the memories we will create and the future we are bulding, together 😍.</p>
 											<p>Your kotik</p>
 
 											<hr />
