--- a/Nika's Wonderland/NW.html
+++ b/Nika's Wonderland/NW.html
@@ -101,6 +101,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/06.jpg" class="image">
+										<img src="images/Us6.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Home officing together</h3>
+										<p>It was fun to have you, my place is also yours. And also, fart unlocked!</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/Her3.jpg" alt="" />
 									</a>
