--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Her14.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Bags are for pussies</h3>
+										<p>A statement by Nika, 29.04.2025 :D</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/08.jpg" class="image">
 										<img src="images/Her10.jpg" alt="" />
 									</a>
@@ -161,6 +170,15 @@
 									<div class="caption">
 										<h3>Happy Together</h3>
 										<p>Totoro smiling after ice cream</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/Her15.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Tea and anime</h3>
+										<p>Two things you love and that I really enjoy we can share</p>
 									</div>
 								</article>
 								<article>
@@ -318,6 +336,10 @@
                 <a href="https://www.youtube.com/watch?v=_gTsBdYntp4&pp=ygUbanVsaWV0YSB2ZW5lZ2FzIGxpbW9uIHkgc2Fs" target="_blank"><p>💌 Julieta Venegas - Limon y Sal 🎵</p></a>
                 <p class="song-note">Why this song? It's a reminder that I love you exactly as you are, and that I cherish you as a whole, without wanting to change anything.</p>
             </div>
+			<div class="song">
+                <a href="https://www.youtube.com/watch?v=9VnyhYJui7g&pp=ygUcbWlrZSBzaGlub2RhIHdvcmxkJ3Mgb24gZmlyZQ%3D%3D" target="_blank"><p>💌 Mike Shinoda - World's on Fire 🎵</p></a>
+                <p class="song-note">Why this song? When my world is on fire and it's too much to bear by myself, I remember I have you 💜</p>
+            </div>
         </div>
     </div>
 </section>
@@ -364,7 +386,8 @@
 <section id="poem-of-the-month" class="section">
 	<h2>Poem of the Month</h2>
 	<div class="month-selector">
-	  <button onclick="showPoem('poem-april-2025')">April 2025</button>
+	    <button onclick="showPoem('poem-may-2025')">May 2025</button>
+		<button onclick="showPoem('poem-april-2025')">April 2025</button>
 	  <button onclick="showPoem('poem-march-2025')">March 2025</button>
 	</div>
   
@@ -429,6 +452,34 @@
 	  <p class="poem-author">"Just as You Are" - By Kotik and ChatGPT</p>
 	  <img src="images/Poem2.jpg" class="poem-image">
 	</div>
+
+	<div class="poem-card" id="poem-may-2025">
+		<h3>May 2025</h3>
+		<p class="poem-content">
+			A moment of happiness,<br>
+			you and I sitting on the verandah,<br>
+			apparently two, but one in soul, you and I.<br>
+			<br>
+			We feel the flowing water of life here,<br>
+			you and I, with the garden’s beauty<br>
+			and the birds singing.<br>
+			<br>
+			The stars will be watching us,<br>
+			and we will show them<br>
+			what it is to be a thin crescent moon.<br>
+			<br>
+			You and I unselfed, will be together,<br>
+			indifferent to idle speculation, you and I.<br>
+			<br>
+			The parrots of heaven will be cracking sugar<br>
+			as we laugh together, you and I.<br>
+			<br>
+			In one form upon this earth,<br>
+			and in another form in a timeless sweet land<br>
+		</p>
+		<p class="poem-author">"A moment of happiness" - By Rumi</p>
+		<img src="images/Poem3.jpg" class="poem-image">
+	  </div>
   
 
   </section>
