--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/Her18.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Casually being the beautifulest</h3>
+										<p>Those eyes! That hair! That smile! Those glasses! I'm in love 😍🥰</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/Her13.jpg" alt="" />
 									</a>
@@ -144,6 +153,15 @@
 									<div class="caption">
 										<h3>Cute in winter</h3>
 										<p>Be it hot or cold, you always look cute. And that hat OMG, is soooo nice</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/08.jpg" class="image">
+										<img src="images/us9.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>"Put your hands up!!"</h3>
+										<p>"Nevaaaaa" And also the breakfast was super nice 🥰</p>
 									</div>
 								</article>
 								<article>
@@ -391,12 +409,16 @@
         </div>
 
 		<div class="open-when">
-            <button class="open-when-btn" onclick="toggleMessage('message5')">If are overwhelmed... </button>
+            <button class="open-when-btn" onclick="toggleMessage('message5')">If you are overwhelmed... </button>
             <p id="message5" class="hidden-message">It's okay to be, from time to time. You are doing great. You are enough, you do enough. And I'm always cheering for you, I'm your biggest fan and also your friend 💖</p>
         </div>
 		<div class="open-when">
-            <button class="open-when-btn" onclick="toggleMessage('message6')">If are happy...😊 </button>
+            <button class="open-when-btn" onclick="toggleMessage('message6')">If you are happy...😊 </button>
             <p id="message6" class="hidden-message">I'm happy too! Did you buy something new? I want to see it! You deserve it! 🥰 Did you have a nice meal? Did you find a new anime? Pray tell! Your joy is also my own, and I want to share it with you lapochka 🥰 You deserve aaaaaall the nice things in this World 💜</p>
+        </div>
+		<div class="open-when">
+            <button class="open-when-btn" onclick="toggleMessage('message7')">If you are overthinking... </button>
+            <p id="message7" class="hidden-message"> I'm here for you 💜 Do you need to talk about it? We can! Do you want to talk about it again? Let's! 😊 You don't have to handle anything alone and you are NEVER annoying me. </p>
         </div>
     </div>
 </section>
