--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Her20.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>#Fashion</h3>
+										<p>The dress! The glasess! The tumbler! The bag! The hair! Her!!! 😍</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/08.jpg" class="image">
 										<img src="images/us9.jpg" alt="" />
 									</a>
@@ -175,6 +184,15 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Us10.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Shhhhhleeeepyyyy</h3>
+										<p>Your snores are the cuuuuutest in the world🥰</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
 										<img src="images/Us4.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -189,6 +207,15 @@
 									<div class="caption">
 										<h3>Bags are for pussies</h3>
 										<p>A statement by Nika, 29.04.2025 :D</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Her19.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>A cutie in the tram</h3>
+										<p>This cute lady in the tram is my girlfriend, unbelieavable!</p>
 									</div>
 								</article>
 								<article>
@@ -228,6 +255,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Us11.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>In the office</h3>
+										<p>Hiiiiiii Karel :D</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/08.jpg" class="image">
 										<img src="images/Her12.jpg" alt="" />
 									</a>
@@ -261,6 +297,15 @@
 									<div class="caption">
 										<h3>Nice hat, nicer smile</h3>
 										<p>You look so happy here with your new hat, it melts my heart.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/Us12.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Ice Cream</h3>
+										<p>No doubts I love ice cream the most when I share it with you</p>
 									</div>
 								</article>
 								<article>
@@ -427,6 +472,7 @@
 <section id="poem-of-the-month" class="section">
 	<h2>Poem of the Month</h2>
 	<div class="month-selector">
+			<button onclick="showPoem('poem-july-2025')">July 2025</button>
 		<button onclick="showPoem('poem-june-2025')">June 2025</button>
 	    <button onclick="showPoem('poem-may-2025')">May 2025</button>
 		<button onclick="showPoem('poem-april-2025')">April 2025</button>
@@ -544,6 +590,34 @@
 		<p class="poem-author">"I Belong In Your Arms" - By Deborah Brideau</p>
 		<img src="images/Poem4.jpg" class="poem-image">
 	  </div>
+
+	  <div class="poem-card" id="poem-july-2025">
+		<h3>July 2025</h3>
+		<p class="poem-content">
+			If it were possible<br>
+			to place you in my brain<br>
+			to let you roam around<br>
+			in and out<br>
+			my thought waves<br>
+			you would never<br>
+			have to ask<br>
+			why do you love me?<br>
+			<br>
+			This morning as you slept<br>
+			I wanted to kiss you awake<br>
+			say I love you till your brain<br>
+			smiled and nodded yes<br>
+			this man does love me.<br>
+			<br>
+			Each day the list grows<br>
+			filled with the things that are you<br>
+			things that make my heart jump<br>
+			yet words would sound strange<br>
+			become corny in utterance.<br>
+		</p>
+		<p class="poem-author">"Sunshine" - By Pat Parker</p>
+		<img src="images/Poem5.jpg" class="poem-image">
+	  </div>
   
 
   </section>
@@ -639,7 +713,7 @@
 										<div class="popup-content">
 											<span class="close-btn" onclick="closePopup()">&times;</span>
 											<h2>Lapochka 💜</h2>
-											<p>Just a reminder... you are the kindest, funniest, smartest, prettiest woman in the whole world, and I'm so so lucky to have you 💖</p>
+											<p>Enjoy Baku! I'll meet you there 💖 And even though we'll be apart, and I'll miss you a lot, my love for you will only grow stronger</p>
 										</div>
 									</div>
 											<hr />
